[gd_scene load_steps=2 format=3 uid="uid://c8j7yv3qwx4qm"]

[ext_resource type="Script" path="res://objects/Enemy.gd" id="1_enemy"]

[node name="Enemy" type="Node2D"]
position = Vector2(0, 50)
script = ExtResource("1_enemy")

[node name="TileContainer" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(240, 240)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 240.0

[node name="BackgroundPanel" type="Panel" parent="TileContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LiquidWave" type="ColorRect" parent="TileContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="EnemySprite" type="Sprite2D" parent="TileContainer"]
z_index = 1
position = Vector2(120, 120)
scale = Vector2(0.273973, 0.273973)

[node name="LevelLabel" type="RichTextLabel" parent="."]
offset_left = 0.0
offset_top = 245.0
offset_right = 240.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "Lv 2"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = 0.0
offset_top = -60.0
offset_right = 240.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "Enemy"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageLabel" type="RichTextLabel" parent="."]
offset_left = 0.0
offset_top = 295.0
offset_right = 240.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.5, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = ""
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
